--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -113,6 +113,39 @@ jobs:
           echo "✅ Archive phase completed."
 
       # -------------------------------
+      # 📄 Create ExportOptions.plist
+      # -------------------------------
+      - name: 🧾 Create ExportOptions.plist
+        run: |
+          cat <<EOF > ExportOptions.plist
+          <?xml version="1.0" encoding="UTF-8"?>
+          <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN"
+           "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+          <plist version="1.0">
+          <dict>
+              <key>method</key>
+              <string>app-store</string>
+              <key>teamID</key>
+              <string>${TEAM_ID}</string>
+              <key>provisioningProfiles</key>
+              <dict>
+                  <key>com.farra.app</key>
+                  <string>Farra_iOS_AppStore_${TEAM_ID}</string>
+              </dict>
+              <key>compileBitcode</key>
+              <false/>
+              <key>signingStyle</key>
+              <string>manual</string>
+              <key>uploadSymbols</key>
+              <true/>
+              <key>generateAppStoreInformation</key>
+              <true/>
+          </dict>
+          </plist>
+          EOF
+          echo "✅ ExportOptions.plist created successfully"
+
+      # -------------------------------
       # 6️⃣ Export signed IPA
       # -------------------------------
       - name: 📦 Export IPA from Archive
