Add OTP verification page and fix backspace auto-focus logic

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   },
   "cordova": {
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ],
     "plugins": {
       "cordova-plugin-statusbar": {}
