--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -85,8 +85,8 @@ jobs:
 
           if [ -e "Farra.xcworkspace" ]; then
             echo "📘 Using .xcworkspace"
-            xcodebuild -workspace Farra.xcworkspace \
-              -scheme farra \
+            xcodebuild -workspace App.xcworkspace \
+              -scheme App \
               -configuration Release \
               -archivePath $PWD/../../build/Farra.xcarchive \
               clean archive \
@@ -98,8 +98,8 @@ jobs:
               OTHER_CODE_SIGN_FLAGS="--keychain ~/Library/Keychains/ios-build.keychain"
           else
             echo "📗 Using .xcodeproj"
-            xcodebuild -project Farra.xcodeproj \
-              -scheme farra \
+            xcodebuild -project App.xcodeproj \
+              -scheme App \
               -configuration Release \
               -archivePath $PWD/../../build/Farra.xcarchive \
               clean archive \
