--- a/package.json
+++ b/package.json
@@ -14,13 +14,11 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "cordova-android": "^14.0.1",
-    "cordova-ios": "^8.0.0",
     "cordova-plugin-statusbar": "^4.0.0"
   },
   "cordova": {
     "platforms": [
-      "android",
-      "ios"
+      "android"
     ],
     "plugins": {
       "cordova-plugin-statusbar": {}
