add new pages and bump version to 1.0.3 (build 7)

--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -85,17 +85,22 @@ jobs:
 
           if [ -e "Farra.xcworkspace" ]; then
             echo "📘 Using .xcworkspace"
-            xcodebuild -workspace Farra.xcworkspace \
-              -scheme farra \
-              -configuration Release \
-              -archivePath $PWD/../../build/Farra.xcarchive \
+           xcodebuild \
+            -workspace Farra.xcworkspace \
+             -scheme Farra \
+             -configuration Release \
+            -archivePath $PWD/../../build/Farra.xcarchive \
               clean archive \
-              -destination generic/platform=iOS \
+            -destination generic/platform=iOS \
               CODE_SIGN_STYLE=Manual \
-              CODE_SIGN_IDENTITY="Apple Distribution" \
-              PROVISIONING_PROFILE_SPECIFIER="$PROFILE_UUID" \
-              DEVELOPMENT_TEAM="$TEAM_ID" \
-              OTHER_CODE_SIGN_FLAGS="--keychain ~/Library/Keychains/ios-build.keychain"
+                       CODE_SIGN_IDENTITY="Apple Distribution" \
+                DEVELOPMENT_TEAM="$TEAM_ID" \
+             PROVISIONING_PROFILE_SPECIFIER="$PROFILE_UUID" \
+              OTHER_CODE_SIGN_FLAGS="--keychain ~/Library/Keychains/ios-build.keychain" \
+              CODE_SIGNING_ALLOWED=YES \
+             CODE_SIGNING_REQUIRED=YES \
+              ALL_OTHER_SWIFT_FLAGS="-warnings-as-errors"
+
           else
             echo "📗 Using .xcodeproj"
             xcodebuild -project Farra.xcodeproj \
